--- a/gmao/templates/gmao/detail_intervention.html
+++ b/gmao/templates/gmao/detail_intervention.html
@@ -18,6 +18,9 @@
 
 {% block extra_css %}
     <style>
+        .container-fluid{
+        padding-top: 10px;
+        }
         .intervention-card {
             margin-bottom: 10px;
         }
@@ -63,7 +66,7 @@
             transform: translateY(-50%);
             white-space: nowrap;
             padding: 2px 0;
-            font-size: 0.8rem;
+            font-size: 1rem !important;
         }
         .intervention-info {
             margin-bottom: 5px;
@@ -107,7 +110,7 @@
 {% block content %}
     <div class="container-fluid">
         <div class="container-fluid">
-        <h4 class="mb-2">Détails de l'intervention pour la doléance {{ intervention.doleance.ndi }}</h4>
+        <h5 class="mb-2">Détails de l'intervention pour la doléance {{ intervention.doleance.ndi }}</h5>
         <p class="mb-2 small">{{ intervention.doleance.panne_declarer }}</p>
 
         <div class="row">
@@ -146,13 +149,25 @@
                         <div class="progress-container">
                             <div class="progress-bar-vertical bg-success" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
                             <div class="progress-step" data-step="start">
-                                <span class="progress-label">Début : <span id="top_depart">{{ intervention.top_depart }}</span></span>
+                                <span class="progress-label">Début : <span id="top_depart">{{ intervention.top_depart|date:"d/m/Y H:i" }}</span></span>
                             </div>
                             <div class="progress-step" data-step="half">
-                                <span class="progress-label">Travail : <span id="top_debut">{{ intervention.top_debut|default:"Non commencé" }}</span></span>
+                                <span class="progress-label">Travail : <span id="top_debut">
+                                {% if intervention.top_debut %}
+                                {{ intervention.top_debut|date:"d/m/Y H:i" }}
+                                {% else %}
+                                Non commencé
+                                {% endif %}
+                                </span></span>
                             </div>
                             <div class="progress-step" data-step="end">
-                                <span class="progress-label">Fin : <span id="top_terminer">{{ intervention.top_terminer|default:"Non terminé" }}</span></span>
+                                <span class="progress-label">Fin : <span id="top_terminer">
+                                {% if intervention.top_terminer %}
+                                {{ intervention.top_terminer|date:"d/m/Y H:i" }}
+                                {% else %}
+                                Non terminé
+                                {% endif %}
+                                </span></span>
                             </div>
                         </div>
                         <p class="intervention-info">Durée : <span id="dureeIntervention">{{ intervention.duree_intervention|default:"0" }}</span> sec</p>
@@ -160,7 +175,7 @@
                             {% if intervention.is_done %}
                                 Terminée
                             {% elif intervention.is_half_done %}
-                                En cours
+                                Attente FI: {{ intervention.numero_fiche }}
                             {% else %}
                                 Non commencée
                             {% endif %}
@@ -265,6 +280,9 @@
                 success: function (response) {
                     if (response.success) {
                         alert('Intervention commencée avec succès.');
+                        $('#top_debut').text(new Date(response.top_debut).toLocaleString(
+                            'fr-FR', { day: '2-digit', month: '2-digit', year: 'numeric',
+                             hour: '2-digit', minute: '2-digit' }));
                         $('#top_debut').text(response.top_debut);
                         $('.progress-bar').removeClass('bg-info').addClass('bg-warning')
                             .css('width', '66%')
