--- a/gmao/templates/gmao/detail_intervention.html
+++ b/gmao/templates/gmao/detail_intervention.html
@@ -175,7 +175,7 @@
                             {% if intervention.is_done %}
                                 Terminée
                             {% elif intervention.is_half_done %}
-                                Attente FI: {{ intervention.numero_fiche }}
+                                En cours
                             {% else %}
                                 Non commencée
                             {% endif %}
