--- a/gmao/templates/gmao/detail_intervention.html
+++ b/gmao/templates/gmao/detail_intervention.html
@@ -194,12 +194,72 @@
     <div id="interventionFormModal" class="modal">
         <div class="modal-content">
             <span class="close">&times;</span>
-            <h5>Fiche d'Intervention</h5>
+            <h3>Fiche d'Intervention</h3>
             <form id="interventionForm">
-                <!-- Le contenu du formulaire reste inchangé -->
+                <input type="hidden" id="intervention-id-input" name="intervention_id" value="{{ intervention.id }}">
+                {% csrf_token %}
+                <div class="form-group">
+                    <label for="numero_fiche">Numéro de fiche :</label>
+                    <input type="text" id="numero_fiche" name="numero_fiche" maxlength="5" pattern="\d{1,5}" required>
+                </div>
+                <div class="form-group">
+                    <label for="ndi">NDI :</label>
+                    <input type="text" id="ndi" name="ndi" value="{{ intervention.doleance.ndi }}" readonly>
+                </div>
+                <div class="form-group">
+                    <label for="date">Date :</label>
+                    <input type="date" id="date" name="date" value="{{ intervention.top_debut|date:'Y-m-d' }}" readonly>
+                </div>
+                <div class="form-group">
+                    <label for="heure_debut">Heure de début :</label>
+                    <input type="time" id="heure_debut" name="heure_debut"
+                           value="{{ intervention.top_debut|time:'H:i' }}" readonly>
+                </div>
+                <div class="form-group">
+                    <label for="heure_fin">Heure de fin :</label>
+                    <input type="time" id="heure_fin" name="heure_fin" required>
+                </div>
+                <div class="form-group">
+                    <label for="station">Station :</label>
+                    <input type="text" id="station" name="station"
+                           value="{{ intervention.doleance.station.libelle_station }}" readonly>
+                </div>
+                <div class="form-group">
+                    <label for="panne_declaree">Panne déclarée :</label>
+                    <textarea id="panne_declaree" name="panne_declaree" rows="3"
+                              readonly>{{ intervention.doleance.panne_declarer }}</textarea>
+                </div>
+                <div class="form-group">
+                    <label for="description_panne">Description de la panne constatée :</label>
+                    <textarea id="description_panne" name="description_panne" rows="3" required></textarea>
+                </div>
+                <div class="form-group">
+                    <label for="resolution">Résolution:</label>
+                    <textarea id="resolution" name="resolution" rows="3" required></textarea>
+                </div>
+                <div class="form-group">
+                    <label for="observations">Observations :</label>
+                    <textarea id="observations" name="observations" rows="3"></textarea>
+                </div>
+                <div class="form-group">
+                    <label for="pieces_changees">Pièces changées :</label>
+                    <textarea id="pieces_changees" name="pieces_changees" rows="3"></textarea>
+                </div>
+                <div class="form-group">
+                    <label for="statut-final">Statut final de l'intervention :</label>
+                    <select id="statut-final" name="statut_final" required>
+                        <option value="">Choisissez un statut</option>
+                        <option value="TER">Terminé (TER)</option>
+                        <option value="ATP">Attente Pièces (ATP)</option>
+                        <option value="ATD">Attente Décision (ATD)</option>
+                    </select>
+                </div>
+                <button type="submit" class="btn btn-success">Terminer l'intervention</button>
             </form>
+
         </div>
     </div>
+
 {% endblock %}
 
 {% block extra_js %}
