--- a/gmao/templates/gmao/detail_intervention.html
+++ b/gmao/templates/gmao/detail_intervention.html
@@ -106,7 +106,7 @@
             }
         }
     </style>{% endcomment %}
-    <style>
+    {% comment %}<style>
         .gauge-container {
             width: 200px;
             height: 200px;
@@ -178,7 +178,7 @@
             border: 1px solid #ddd;
             border-radius: 4px;
         }
-    </style>
+    </style>{% endcomment %}
     <style>
         .intervention-card {
             margin-bottom: 20px;
