--- a/gmao/templates/gmao/detail_intervention.html
+++ b/gmao/templates/gmao/detail_intervention.html
@@ -15,102 +15,34 @@
     <i style="color: hsl(137, 90%, 50%);" class="fa-solid fa-user-alt"></i>
     &nbsp;&nbsp;&nbsp;{{ user.first_name }}&nbsp;{{ user.last_name }}
 {% endblock navbar-content %}
-
 {% block extra_css %}
     <style>
-        .gauge-container {
-            width: 200px;
-            height: 200px;
-            margin: auto;
+        body {
+            padding-top: 56px; /* Adjust based on your navbar height */
         }
-
-        .row {
-            display: flex;
-            align-items: center;
-            margin-bottom: 20px;
+        .container-fluid {
+            padding-top: 15px;
         }
-
-        .col-md-4 {
-            flex: 0 0 33.333333%;
-            max-width: 33.333333%;
-        }
-
-        .col-md-8 {
-            flex: 0 0 66.666667%;
-            max-width: 66.666667%;
-        }
-
-        .modal {
-            display: none;
-            position: fixed;
-            z-index: 1;
-            left: 0;
-            top: 0;
-            width: 100%;
-            height: 100%;
-            overflow: auto;
-            background-color: rgba(0, 0, 0, 0.4);
-        }
-
-        .modal-content {
-            background-color: #fefefe;
-            margin: 15% auto;
-            padding: 20px;
-            border: 1px solid #888;
-            width: 80%;
-            max-width: 600px;
-        }
-
-        .close {
-            color: #aaa;
-            float: right;
-            font-size: 28px;
-            font-weight: bold;
-        }
-
-        .close:hover, .close:focus {
-            color: black;
-            text-decoration: none;
-            cursor: pointer;
-        }
-
-        .form-group {
+        .intervention-card {
             margin-bottom: 15px;
         }
-
-        label {
-            display: block;
-            margin-bottom: 5px;
-        }
-
-        input[type="text"], input[type="date"], input[type="time"], textarea {
-            width: 100%;
-            padding: 8px;
-            border: 1px solid #ddd;
-            border-radius: 4px;
-        }
-    </style>
-    <style>
-        .intervention-card {
-            margin-bottom: 10px;
-        }
         .card-body {
-            padding: 10px;
+            padding: 15px;
         }
         .progress-container {
             height: 150px;
             width: 100%;
             position: relative;
-            margin: 10px 0;
-            padding-left: 20px;
+            margin: 15px 0;
+            padding-left: 25px;
         }
         .progress-bar-vertical {
             width: 3px;
             height: 0;
             transition: height 0.6s ease;
             position: absolute;
-            left: -1px;
-            bottom: 5px;
+            left: 0;
+            bottom: 0;
         }
         .progress-step {
             width: 15px;
@@ -140,7 +72,6 @@
         }
         .intervention-info {
             margin-bottom: 5px;
-            padding-left: 20px;
             font-size: 0.9rem;
         }
         .gauge-container {
@@ -154,17 +85,15 @@
             gap: 5px;
         }
         .btn-sm {
-            padding: 3px 6px;
-            font-size: 0.75rem;
+            padding: 5px 10px;
+            font-size: 0.875rem;
             width: 100%;
         }
         .modal-content {
             width: 95%;
-            max-width: 400px;
+            max-width: 500px;
         }
         @media (max-width: 767px) {
-            .order-1 { order: 1; }
-            .order-2 { order: 2; }
             .progress-container {
                 height: 120px;
             }
@@ -176,8 +105,6 @@
             }
         }
     </style>
-
-
 {% endblock %}
 {% block content %}
     <div class="container-fluid">
