--- a/gmao/templates/gmao/detail_intervention.html
+++ b/gmao/templates/gmao/detail_intervention.html
@@ -41,7 +41,7 @@
             height: 0;
             transition: height 0.6s ease;
             position: absolute;
-            left: 0;
+            left: -1px;
             bottom: 0;
         }
         .progress-step {
