--- a/gmao_teams/templates/gmao_teams/gestion_equipes.html
+++ b/gmao_teams/templates/gmao_teams/gestion_equipes.html
@@ -63,8 +63,9 @@
                             <div class="col-md-6">
                                 <h4>Doléances non attribuées</h4>
                                 <div class="input-group mb-3">
-                                    <input type="text" id="searchDoleances" class="form-control"
-                                           placeholder="Rechercher une doléance...">
+                                    <label for="searchDoleances"></label><input type="text" id="searchDoleances"
+                                                                                class="form-control"
+                                                                                placeholder="Rechercher une doléance...">
                                 </div>
                                 <ul id="listeDoléancesNonAttribuées" class="list-group mb-3"
                                     style="max-height: 300px; overflow-y: auto;"></ul>
