--- a/gmao/templates/gmao/home.html
+++ b/gmao/templates/gmao/home.html
@@ -211,7 +211,7 @@
 
 {% block extra_js %}
     <script src="{% static 'gmao/js/home.js' %}"></script>
-    {#    <script src="{% static 'gmao/js/teams.js' %}"></script>#}
+    <script src="{% static 'gmao/js/teams.js' %}"></script>
     <script>
         const USER_ROLE = "{{ user_role }}";
     </script>
